--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-    <link data-trunk rel="css" href="static/app.css" />
+    <link data-trunk rel="css" href="static/css/app.css" />
+    <link data-trunk rel="css" href="static/css/start_screen.css" />
+    <link data-trunk rel="copy-dir" href="static">
 </head>
 
 <body></body>
