--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link data-trunk rel="css" href="static/css/app.css" />
     <link data-trunk rel="css" href="static/css/gaming_board.css" />
     <link data-trunk rel="css" href="static/css/intro.css" />
+    <link data-trunk rel="css" href="static/css/narration.css" />
     <link data-trunk rel="css" href="static/css/rooms.css" />
     <link data-trunk rel="css" href="static/css/start_screen.css" />
     <link data-trunk rel="copy-dir" href="static">
