--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link data-trunk rel="css" href="static/css/inventory.css" />
     <link data-trunk rel="css" href="static/css/map.css" />
     <link data-trunk rel="css" href="static/css/narration.css" />
+    <link data-trunk rel="css" href="static/css/opened_item.css" />
     <link data-trunk rel="css" href="static/css/rooms.css" />
     <link data-trunk rel="css" href="static/css/start_screen.css" />
     <link data-trunk rel="copy-dir" href="static">
